EXTRA_DIST =\
	autogen.sh\
	projects/visualc7/ShivulkanVG.sln\
	projects/visualc7/ShivulkanVG.suo\
	projects/visualc7/*.vcproj\
	projects/visualc8/ShivulkanVG.sln\
	projects/visualc8/ShivulkanVG.suo\
	projects/visualc8/*.vcproj

if BUILD_EXAMPLES
MAYBE_EXAMPLES = examples
endif

SUBDIRS = src $(MAYBE_EXAMPLES)
