EXTRA_DIST =\
	autogen.sh\
	projects/visualc7/VulkanVG.sln\
	projects/visualc7/VulkanVG.suo\
	projects/visualc7/*.vcproj\
	projects/visualc8/VulkanVG.sln\
	projects/visualc8/VulkanVG.suo\
	projects/visualc8/*.vcproj

if BUILD_EXAMPLES
MAYBE_EXAMPLES = examples
endif

SUBDIRS = src $(MAYBE_EXAMPLES)
